# compiler-assignment

./: c_prod.y  input.c  phase1  phase1.c  phase1.cpp  token.hpp  y.tab.c
TAC/: example  example.l  example.y  lex.yy.c  make  y.tab.c  y.tab.h
ThreeAddressCode/: example  example.l  input.txt
homemade_compiler/: Action.h  CMakeLists.txt  ParseTable.h  Parser.cpp  Parser.h  README.md  grammar  lalr_table  parse_table.cpp  phase1.cpp  token.hpp
homemade_compiler/tests/: input.c  input2.c
parser/: Action.h  ParseTable.cpp  Parser.h  Rule.h  Understanding parsers generated by GNU Bison.html  Yacc: Yet Another Compiler-Compiler.html  c_prod.y  f  k  lex.l  lex.yy.c  m_f  parse_node.h  parse_table  parse_table.cpp  parser.cxx  parsetable  rules  rules2  t2  tableP  tableP2  w  y.output  y.tab.c  y.tab.h
